Complete refactoring of role
This was a very much needed refactoring. Previously Ubuntu did not work
at all, whereas CentOS worked fine. Also, implemented Travis CI testing.

--- a/templates/etc/guacamole/guacamole.properties.j2
+++ b/templates/etc/guacamole/guacamole.properties.j2
@@ -1,5 +1,6 @@
+{{ ansible_managed | comment }}
 auth-provider: {{ guacamole_auth_provider }}
-basic-user-mapping: /etc/guacamole/user-mapping.xml
-guacd-hostname: {{ ansible_hostname }}
-guacd-port: {{ guacamole_server_port }}
+# basic-user-mapping: /etc/guacamole/user-mapping.xml
+# guacd-hostname: {{ ansible_hostname }}
+# guacd-port: {{ guacamole_server_port }}
 user-mapping: /etc/guacamole/user-mapping.xml
