--- a/templates/etc/guacamole/guacamole.properties.j2
+++ b/templates/etc/guacamole/guacamole.properties.j2
@@ -15,21 +15,21 @@ mysql-database: {{ guacamole_mysql_db['name'] }}
 mysql-username: {{ guacamole_mysql_db['username'] }}
 mysql-password: {{ guacamole_mysql_db['password'] }}
 {% endif %}
-+{% if guacamole_postgresql_auth %}
-+postgresql-hostname: {{ guacamole_postgresql_db['host'] }}
-+postgresql-port: {{ guacamole_postgresql_db['port'] }}
-+postgresql-database: {{ guacamole_postgresql_db['name'] }}
-+postgresql-username: {{ guacamole_postgresql_db['username'] }}
-+postgresql-password: {{ guacamole_postgresql_db['password'] }}
-+postgresql-auto-create-accounts: {{ guacamole_postgresql_db['auto-create-accounts'] }}
-+{% endif %}
-+{% if guacamole_openid_auth %}
-+openid-authorization-endpoint: {{ guacamole_openid['authorization-endpoint'] }}
-+openid-jwks-endpoint: {{ guacamole_openid['jwks-endpoint'] }}
-+openid-issuer: {{ guacamole_openid['issuer'] }}
-+openid-client-id: {{ guacamole_openid['client-id'] }}
-+openid-redirect-uri: {{ guacamole_openid['redirect-uri'] }}
-+openid-username-claim-type: {{ guacamole_openid['username-claim-type'] }}
-+openid-groups-claim-type: {{ guacamole_openid['groups-claim-type'] }}
-+openid-allowed-clock-skew: {{ guacamole_openid['allowed-clock-skew'] }}
-+{% endif %}
+{% if guacamole_postgresql_auth %}
+postgresql-hostname: {{ guacamole_postgresql_db['host'] }}
+postgresql-port: {{ guacamole_postgresql_db['port'] }}
+postgresql-database: {{ guacamole_postgresql_db['name'] }}
+postgresql-username: {{ guacamole_postgresql_db['username'] }}
+postgresql-password: {{ guacamole_postgresql_db['password'] }}
+postgresql-auto-create-accounts: {{ guacamole_postgresql_db['auto-create-accounts'] }}
+{% endif %}
+{% if guacamole_openid_auth %}
+openid-authorization-endpoint: {{ guacamole_openid['authorization-endpoint'] }}
+openid-jwks-endpoint: {{ guacamole_openid['jwks-endpoint'] }}
+openid-issuer: {{ guacamole_openid['issuer'] }}
+openid-client-id: {{ guacamole_openid['client-id'] }}
+openid-redirect-uri: {{ guacamole_openid['redirect-uri'] }}
+openid-username-claim-type: {{ guacamole_openid['username-claim-type'] }}
+openid-groups-claim-type: {{ guacamole_openid['groups-claim-type'] }}
+openid-allowed-clock-skew: {{ guacamole_openid['allowed-clock-skew'] }}
+{% endif %}
