--- a/templates/etc/guacamole/guacamole.properties.j2
+++ b/templates/etc/guacamole/guacamole.properties.j2
@@ -33,3 +33,64 @@ openid-username-claim-type: {{ guacamole_openid['username-claim-type'] }}
 openid-groups-claim-type: {{ guacamole_openid['groups-claim-type'] }}
 openid-allowed-clock-skew: {{ guacamole_openid['allowed-clock-skew'] }}
 {% endif %}
+{% if guacamole_ldap is defined %}
+{# ldap-hostname is define in ldap-servers.yml to premit multiple ldap server #}
+{% if guacamole_ldap['port'] is defined %}
+ldap-port: {{ guacamole_ldap['port'] }}
+{% endif %}
+{% if guacamole_ldap['encryption_method'] is defined %}
+ldap-encryption-method: {{ guacamole_ldap['encryption_method'] }}
+{% endif %}
+{% if guacamole_ldap['max_search_results'] is defined %}
+ldap-max-search-results: {{ guacamole_ldap['max_search_results'] }}
+{% endif %}
+{% if guacamole_ldap['search_bind_dn'] is defined %}
+ldap-search-bind-dn: {{ guacamole_ldap['search_bind_dn'] }}
+{% endif %}
+{% if guacamole_ldap['search_bind_password'] is defined %}
+ldap-search-bind-password: {{ guacamole_ldap['search_bind_password'] }}
+{% endif %}
+{% if guacamole_ldap['user_base_dn'] is defined %}
+ldap-user-base-dn: {{ guacamole_ldap['user_base_dn'] }}
+{% endif %}
+{% if guacamole_ldap['username_attribute'] is defined %}
+ldap-username-attribute: {{ guacamole_ldap['username_attribute'] }}
+{% endif %}
+{% if guacamole_ldap['member_attribute'] is defined %}
+ldap-member-attribute: {{ guacamole_ldap['member_attribute'] }}
+{% endif %}
+{% if guacamole_ldap['member_attribute_type'] is defined %}
+ldap-member-attribute-type: {{ guacamole_ldap['member_attribute_type'] }}
+{% endif %}
+{% if guacamole_ldap['member_attribute_type'] is defined %}
+{# https://guacamole.apache.org/doc/gug/configuring-guacamole.html#parameter-tokens #}
+ldap-user-attributes: {{ guacamole_ldap['member_attribute_type'] }}
+{% endif %}
+{% if guacamole_ldap['search_filter'] is defined %}
+ldap-user-search-filter: {{ guacamole_ldap['search_filter'] }}
+{% endif %}
+{% if guacamole_ldap['config_base_dn'] is defined %}
+ldap-config-base-dn: {{ guacamole_ldap['config_base_dn'] }}
+{% endif %}
+{% if guacamole_ldap['group_base_dn'] is defined %}
+ldap-group-base-dn: {{ guacamole_ldap['group_base_dn'] }}
+{% endif %}
+{% if guacamole_ldap['group_name_attribute'] is defined %}
+ldap-group-name-attribute: {{ guacamole_ldap['group_name_attribute'] }}
+{% endif %}
+{% if guacamole_ldap['group_search_filter'] is defined %}
+ldap-group-search-filter: {{ guacamole_ldap['group_search_filter'] }}
+{% endif %}
+{% if guacamole_ldap['dereference_aliases'] is defined %}
+ldap-dereference-aliases: {{ guacamole_ldap['dereference_aliases'] }}
+{% endif %}
+{% if guacamole_ldap['follow_referrals'] is defined %}
+ldap-follow-referrals: {{ guacamole_ldap['follow_referrals'] }}
+{% endif %}
+{% if guacamole_ldap['max_referral_hops'] is defined %}
+ldap-max-referral-hops: {{ guacamole_ldap['max_referral_hops'] }}
+{% endif %}
+{% if guacamole_ldap['operation_timeout'] is defined %}
+ldap-operation-timeout: {{ guacamole_ldap['operation_timeout'] }}
+{% endif %}
+{% endif %}
