Update OpenID authentification
* guacamole-auth-openid is not existing anymore, the openid is now included in the sso plugin ( https://guacamole.apache.org/releases/1.5.5/ )
* add a exemple how-to enable OpenID authentification (in README.md)
* adapt code for the jar file of openid is not in the sso tar file
* make guacamole_openid['username-claim-type'] optional
* make guacamole_openid['groups-claim-type'] optional
* make guacamole_openid['allowed-clock-skew'] optional
* add guacamole_openid['scope'] attribut (optional)
* add guacamole_openid['max-token-validity'] (optional)
* add guacamole_openid['max-nonce-validity'] (optional)

--- a/templates/etc/guacamole/guacamole.properties.j2
+++ b/templates/etc/guacamole/guacamole.properties.j2
@@ -39,9 +39,24 @@ openid-jwks-endpoint: {{ guacamole_openid['jwks-endpoint'] }}
 openid-issuer: {{ guacamole_openid['issuer'] }}
 openid-client-id: {{ guacamole_openid['client-id'] }}
 openid-redirect-uri: {{ guacamole_openid['redirect-uri'] }}
+{% if guacamole_openid['username-claim-type'] is defined %}
 openid-username-claim-type: {{ guacamole_openid['username-claim-type'] }}
+{% endif %}
+{% if guacamole_openid['groups-claim-type'] is defined %}
 openid-groups-claim-type: {{ guacamole_openid['groups-claim-type'] }}
+{% endif %}
+{% if guacamole_openid['scope'] is defined %}
+openid-scope: {{ guacamole_openid['scope'] }}
+{% endif %}
+{% if guacamole_openid['allowed-clock-skew'] is defined %}
 openid-allowed-clock-skew: {{ guacamole_openid['allowed-clock-skew'] }}
+{% endif %}
+{% if guacamole_openid['max-token-validity'] is defined %}
+openid-max-token-validity: {{ guacamole_openid['max-token-validity'] }}
+{% endif %}
+{% if guacamole_openid['max-nonce-validity'] is defined %}
+openid-max-nonce-validity: {{ guacamole_openid['max-nonce-validity'] }}
+{% endif %}
 {% endif %}
 {# Ldap Configuration #}
 {% if guacamole_ldap is defined %}
